# sonata

./: .example.env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  rustfmt.toml  sonata.toml
.cargo/: release.toml
.sqlx/: query-00736c782f4b8b83e6c8d0c207fc0f04555db3ebb9ffaf1ad53e5169c2fcf4b1.json  query-031de017d002b20f2e7f06665541dea4552d02f0577bf415954f21b13d51bacf.json  query-0960852bc3ce61c6bc33cce8521f995413948c88978b48ed99c5a8ebf3f75a0c.json  query-0fb238211650392fa035bf77d287f6352e89d9eec2bfd88cc5547140c6302c27.json  query-1e57ad7470d6b6d3c6041d58091e1fc6821779f831317c3f4b1f688efeb23569.json  query-24a05d1bf9ab87e03612173d26eabaaa6ac2562988ea31fb26a35886ed30bdb5.json  query-26fc6c2e222c7e1cd88fee40967efedaf50f68919ac2cd1e75ce500e461814d3.json  query-330863e05bd107329449f020dacb471e7a389b2faa32dcb55c9cdd9720b5883c.json  query-35121941ebbf2a3d87b60a7dddf63c873ab21f04905ea1b9c92c6dd1a8d7080a.json  query-36d50832e62147d09cdfea411aa263cc023287ea6aeea9f9f23cd3b956bbd0ae.json  query-38a8053cea9fb19f62451d4c3d9d84a884e033abb641ac83afb1f334bef133fc.json  query-38d45f427e861ba8929b77afe1778aef529b48dd866d2b26141ded6ff9293c53.json  query-3f4a2351ba449e00a54aaa0305162e2cb8b47fcb32c92875b65d257ae536455e.json  query-4735dd56babe8adaace4429be4f2044098bcc4713a3b191982bb43eb05fef044.json  query-4980d873ead56758880846b1fdef13a32f3507b017f5b893b4617a2cc0c1b210.json  query-4f785dcdebb1d598a4c3b0f0ba1c8d776035fffaa80baed8505f8126bb72160e.json  query-5237cfd8eb76f330f24c5e8b6c5d0688d09518bb36acdccaa2caa65f0dc94c39.json  query-539e76307ca525f09ac3b91d2abb0c07cb3b834f5cad675e8dade9f7c6d086f2.json  query-540f80657a4f4bb4625bf70aaa78e941b6ff9eb1d5c31c5a1d1b136efd38d186.json  query-5dbb343f1e3975a7a7099d66e16f19e4fc79c87c51b8a19a52d1ca49af007366.json  query-5fcfcc77164d66a9ca5282ce1ca26070440a4b64962ea8daa8eddf92adb59213.json  query-611fc07b7b15e40f6fe50f3fa9236023a03e43f45fbe9086da404602231fc597.json  query-625a451034cec2520a78eb06dcbdc683f2b5eb56dbca4ca9ba908cef1a1cf45a.json  query-627f8b068cdf05b570baf022c5c8124e9031fb5d839a1f666202a1568e091b55.json  query-62cd20bf7cf1e63b667a93da8a6c1aef1a4e07fe12365f3741e435a7c15dace7.json  query-636fc9423143a85fd2b3ed1e41188f8d38b586a0d4c69c9a05127685389d315c.json  query-66c0d6bdea50276e5538d7f5160c2f4b8f50da10b44e0c341ea69acc0c9a980b.json  query-6736ea6db6c90a689e54087efc85ecb6d42384fc189702d26652ab300de19026.json  query-68537c103542356678b7748988bd255e5ff974ebb65cf4f804a63d268c59194a.json  query-695a7da31f8830cc882d0fd029c59a14c1d2aaf7556c32a56b70d76a327c5235.json  query-6ac8de40e7b49521a3c7f28f81b887384ee1f1c03af69aadec3736356cb94421.json  query-6c06b9aa317c904f943acb0eb5f550e368185233832135ebd22c6f7f0762d8aa.json  query-6ebc415fd9fa65563e8c22302a8ad67ae44bdc9682ed7696e07b7315ec14fb1a.json  query-71cf514d50feac01edb138131f828b1bcbc38a1bc338f9efcb03993e34287dfc.json  query-744862e4bbc8659440a89aa55f865b90d32123813270e1abdcb69094e2a4b0e8.json  (+31 more)
fixtures/: test_setup.sql  (+5 more)
(+48 files in other folders)
