[package]
name = "sonata"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["The Polyphony Project Contributors <info@polyphony.chat>"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
sqlx = { version = "0.8.6", default-features = false, features = [
    "migrate",
    "postgres",
    "macros",
    "bigdecimal",
    "json",
    "runtime-tokio-rustls",
    "chrono"
] }
poem = { version = "3.1.11", features = ["rustls", "hex", "compression"] }
polyproto = { version = "0.11.0" }
rand = "0.9.1"
env_logger = { version = "0.11.8" }
serde_with = "3.13.0"
thiserror = "2.0.12"
chrono = "0.4.41"
bigdecimal = "0.4.8"

[dev-dependencies]
tokio-test = "0.4"

# We use `opt-level = "s"` as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = 3
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster (16 is the default, but profile.release sets it to 1)
lto = "thin"                # Similarly, speed up linking by a ton

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"

[lints.clippy]
arithmetic_overflow = "warn"
checked_conversions = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "deny"
cast_precision_loss = "warn"
integer_division = "warn"
arithmetic_side_effects = "deny"
unchecked_duration_subtraction = "warn"
unwrap_used = "warn"
expect_used = "warn"
panicking_unwrap = "warn"
option_env_unwrap = "warn"
indexing_slicing = "warn"
join_absolute_paths = "warn"
serde_api_misuse = "warn"
uninit_vec = "warn"
transmute_int_to_char = "deny"
transmute_int_to_float = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
string_to_string = "warn"
str_to_string = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
fallible_impl_from = "warn"
must_use_candidate = "warn"
missing_docs_in_private_items = "warn"
